# os-dashboard

./: .gitignore  CONTRIBUTING.md  FUNDING.yaml  Makefile  README.md  SECURITY.md  SUPPORT.md
controller/: Cargo.toml
controller/src/: main.rs
controller/src/fs/: mod.rs
controller/src/process/: handle.rs  mod.rs
controller/src/system/: mod.rs
fs_view/: fs_view.py
view/: package-lock.json  package.json
view/src/: App.tsx  main.tsx
view/src/components/: Chart.tsx  Dashboard.tsx  DiskMonitor.tsx  MetricCard.tsx  ProcessList.tsx
