[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.35.1", features = ["windows"] }
tokio = { version = "1.36", features = ["full"] }
windows = { version = "0.56", features = ["Win32_System_ProcessStatus", "Win32_Foundation", "Win32_System_Threading"] }
