[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sysinfo = "*"
tokio = { version = "*", features = ["full"] }
windows = { version = "*", features = ["Win32_System_ProcessStatus", "Win32_Foundation", "Win32_System_Threading"] }
base64 = "*"
num_cpus = "*"
raw-cpuid = "*"
once_cell = "*"
anyhow = "*"
chrono = "*"
